Pass correct render_process_id and render_frame_id when begin context menu download

The values are not set correctly, causing some tests to fail

BUG=789081

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I9619e747ba87f376bddbd3bf9b5275e495d74fe0
Reviewed-on: https://chromium-review.googlesource.com/794012
Reviewed-by: Xing Liu <xingliu@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519782}
Former-commit-id: 4a56735dd6e5fe12104c18564e98a1209ed95f30